base/istio/istiod/mutatingwebhookconfiguration.k8s.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-sidecar-injector
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      caBundle: ""
      service:
        name: istiod
        namespace: istio-system
        path: "/inject"
    sideEffects: None
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    admissionReviewVersions: ["v1beta1", "v1"]
    namespaceSelector:
      matchLabels:
        istio-injection: enabled
    objectSelector:
      matchExpressions:
        - key: "sidecar.istio.io/inject"
          operator: NotIn
          values:
            - "false"
